<resources>
    <string name="app_name">BatteryManager</string>
    <string name="app_name_title">Battery Manager</string>
    <string name="fun_text">:)</string>
    <string name="info_title">Check Yout Battery state</string>
    <string name="voltage">Voltage</string>
    <string name="technology">technology</string>
    <string name="plug_state">Plug State</string>
    <string name="temperature">temperature</string>
    <string name="check_battery_health">Check Battery Health</string>
    <string name="battery_percent">Battery percent</string>
    <string name="battery_health_text">battery health text</string>
</resources>